# polygluttony

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  docker-compose.yml  index.html  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/prompts/: glossary-normalize-characters.txt  glossary-normalize-cultivation.txt  glossary-normalize-items.txt  glossary-normalize-locations.txt  glossary-normalize-organizations.txt  glossary-normalize-skills.txt  glossary-personalize.txt  glossary.txt  reference-extract.txt  translate.generic.txt  translate.zh-en.txt  verify.txt
crates/core/prompts/tones/: comedic.txt  funny.txt  standard.txt  wuxia.txt  xianxia.txt
crates/core/src/: context.rs  error.rs  events.rs  lib.rs
crates/core/src/ass/: decode.rs  mod.rs  parse.rs  tags.rs  writer.rs
crates/core/src/config/: languages.rs  mod.rs  presets.rs  projects.rs  store.rs
crates/core/src/glossary/: build.rs  diff.rs  io.rs  mod.rs  model.rs  normalize.rs  personalize.rs  prompts.rs  reference.rs  world_detector.rs
crates/core/src/llm/: anthropic.rs  detect.rs  error.rs  mod.rs  openai.rs  openai_responses.rs  service.rs  sse.rs  test_support.rs
crates/core/src/models/: language_pair.rs  mod.rs
crates/core/src/prompts/: mod.rs
crates/core/src/translation/: batch.rs  batching.rs  cleanup.rs  mod.rs  parse_response.rs  pipeline.rs  prompts.rs  source_detect.rs  verify.rs
crates/core/src/utils/: discover.rs  mod.rs
crates/core/src/validation/: alignment.rs  markers.rs  mod.rs  scopes.rs
crates/core/src/validation/drift/: drift.rs  mod.rs
docs/superpowers/plans/: 2026-06-04-step1-shell-and-connections.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs
src-tauri/src/ass/: mod.rs  parse.rs
src-tauri/src/commands/: connections.rs  glossary.rs  mod.rs  project.rs  prompts.rs  translate.rs
src-tauri/src/config/: mod.rs  projects.rs  store.rs
src-tauri/src/glossary/: build.rs  diff.rs  io.rs  mod.rs  model.rs  normalize.rs  personalize.rs  prompts.rs  reference.rs  run.rs  world_detector.rs
src-tauri/src/llm/: anthropic.rs  detect.rs  error.rs  mod.rs  openai.rs  openai_responses.rs  service.rs  sse.rs  test_support.rs
src-tauri/src/models/: mod.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/translation/: batch.rs  cleanup.rs  mod.rs  pipeline.rs  prompts.rs  run.rs
src-tauri/src/validation/: mod.rs
src-tauri/src/validation/drift/: mod.rs  signals.rs
src/components/: app-layout.tsx  main-nav.tsx  nav-rail.tsx  page-header.tsx  recent-item.tsx  status-bar.tsx  theme-provider.tsx
src/components/ui/: button.tsx  popover.tsx  progress.tsx
src/hooks/: use-backend-event.ts
src/lib/: ipc.ts  query-client.ts
src/routes/: __root.tsx  connections.tsx  glossary.tsx  index.tsx  settings.tsx  translate.tsx  verify.tsx
src/stores/: app-store.ts  glossary-store.ts  translation-store.ts
(+29 files in other folders)
