[package]
name = "anitranslate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Translation engine: ASS tag preservation, multi-provider LLM driver, drift detection, glossary pipeline."

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
futures = "0.3"
regex = "1.11"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "charset"] }
encoding_rs = "0.8"
chardetng = "0.1"
eventsource-stream = "0.2"
rand = "0.9"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1.41", features = ["test-util", "macros", "rt-multi-thread"] }
pretty_assertions = "1"
